# cpp-monopoly-game

./: .gitignore  CMakeLists.txt  README.md  makefile
data/config/default/: aksi.txt  property.txt
data/copycheck/: game_state.txt  log.txt  special.txt
data/default/: misc.txt  property.txt  railroad.txt  utility.txt
data/reviewsave/: game_state.txt  log.txt  tax.txt
include/core/: AuctionManager.hpp  BankruptcyManager.hpp  CommandProcessor.hpp  Game.hpp  GameEngine.hpp  SaveLoadManager.hpp  TurnManager.hpp
include/exception/: GameException.hpp  InvalidEntryInputException.hpp  InvalidFileException.hpp  PlayerTurnException.hpp
include/exception/InvalidEntryInput/: InvalidDiceNumberException.hpp  InvalidTileException.hpp
include/exception/InvalidFile/: FailedToSaveException.hpp  FileNotFoundException.hpp  InvalidConfigException.hpp  UnreadableFileException.hpp
include/exception/PlayerTurn/: InvalidTurnException.hpp  PropertyManagementException.hpp  SkillTurnException.hpp
include/exception/PlayerTurn/PropertyManagement/: ExistingHotelException.hpp  InsufficientMoneyException.hpp  InsufficientOwnedColorException.hpp  PropertyNotMortgagedException.hpp
include/exception/PlayerTurn/SkillTurn/: DiceAlreadyRolledException.hpp  SkillCardUsedException.hpp
include/models/BoardAndTiles/: ActionTile.hpp  Board.hpp  PropertyTile.hpp  SpecialTile.hpp  Tile.hpp  TileTypes.hpp
include/models/BoardAndTiles/ActionTile/: ChanceTile.hpp  CommunityChestTile.hpp  FestivalTile.hpp  TaxTile.hpp
include/models/BoardAndTiles/ActionTile/TaxTile/: IncomingTaxTile.hpp  LuxuryTaxTile.hpp
include/models/BoardAndTiles/PropertyTile/: RailroadTile.hpp  StreetTile.hpp  UtilityTile.hpp
include/models/BoardAndTiles/SpecialTile/: FreeParkingTile.hpp  GoTile.hpp  GoToJailTile.hpp  JailTile.hpp
include/models/CardAndDeck/: ActionCard.hpp  Card.hpp  CardDeck.hpp  ChanceCard.hpp  CommunityChestCard.hpp  DemolitionCard.hpp  DiscountCard.hpp  JailFreeCard.hpp  LassoCard.hpp  MoveCard.hpp  ShieldCard.hpp  SkillCard.hpp  TeleportCard.hpp
include/models/Player/: Player.hpp
include/models/Property/: Property.hpp  RailroadProperty.hpp  StreetProperty.hpp  UtilityProperty.hpp
include/utils/: Formatter.hpp
include/utils/data/: ConfigLoader.hpp  GameConfig.hpp  LogEntry.hpp  TransactionLogger.hpp
include/views/: CLIGUI.hpp  ColorPallete.hpp  GUI.hpp  GUI2.hpp  IGUI.hpp
include/views/animation/: ViewAnimation.hpp
include/views/animation/camera/: CameraManager.hpp  CameraMovement.hpp  View3DCamera.hpp
include/views/animation/physicsEngine/: PhysicsEngine.hpp  PhysicsObject.hpp
include/views/viewElement/: AuctionMenuView.hpp  Entry.hpp  GameHUDView.hpp  Interactable.hpp  MenuView.hpp  Popup.hpp  View2D.hpp  View3D.hpp
include/views/viewElement/board/: BoardView.hpp  TileView.hpp
include/views/viewElement/cards/: CardPileView.hpp  CardView.hpp  SkillHandView.hpp
include/views/viewElement/player/: DiceView.hpp  PlayerInventory.hpp  PlayerProfileView.hpp  PlayerView.hpp
include/views/viewElement/property/: PropertyPopup.hpp
src/core/: AuctionManager.cpp  BankruptcyManager.cpp  CommandProcessor.cpp  Game.cpp  GameEngine.cpp  SaveLoadManager.cpp  TurnManager.cpp  main.cpp  mainCLI.cpp  mainGUI.cpp
src/exception/: GameException.cpp  InvalidEntryInputException.cpp  InvalidFileException.cpp  PlayerTurnException.cpp
src/exception/InvalidEntryInput/: InvalidDiceNumberException.cpp  InvalidTileException.cpp
src/exception/InvalidFile/: FailedToSaveException.cpp  FileNotFoundException.cpp  InvalidConfigException.cpp  UnreadableFileException.cpp
src/exception/PlayerTurn/: InvalidTurnException.cpp  PropertyManagementException.cpp  SkillTurnException.cpp
src/exception/PlayerTurn/PropertyManagement/: ExistingHotelException.cpp  InsufficientMoneyException.cpp  InsufficientOwnedColorException.cpp  PropertyNotMortgagedException.cpp
src/exception/PlayerTurn/SkillTurn/: DiceAlreadyRolledException.cpp  SkillCardUsedException.cpp
src/models/BoardAndTiles/: ActionTile.cpp  Board.cpp  PropertyTile.cpp  SpecialTile.cpp  Tile.cpp
src/models/BoardAndTiles/ActionTile/: ChanceTile.cpp  CommunityChestTile.cpp  FestivalTile.cpp  TaxTile.cpp
src/models/BoardAndTiles/ActionTile/TaxTile/: IncomingTaxTile.cpp  LuxuryTaxTile.cpp
src/models/BoardAndTiles/PropertyTile/: RailroadTile.cpp  StreetTile.cpp  UtilityTile.cpp
src/models/BoardAndTiles/SpecialTile/: FreeParkingTile.cpp  GoTile.cpp  GoToJailTile.cpp  JailTile.cpp
src/models/CardAndDeck/: ActionCard.cpp  Card.cpp  ChanceCard.cpp  CommunityChestCard.cpp  DemolitionCard.cpp  DiscountCard.cpp  JailFreeCard.cpp  LassoCard.cpp  MoveCard.cpp  ShieldCard.cpp  SkillCard.cpp  TeleportCard.cpp
src/models/Player/: Player.cpp
src/models/Property/: Property.cpp  RailroadProperty.cpp  StreetProperty.cpp  UtilityProperty.cpp
src/utils/data/: ConfigLoader.cpp  LogEntry.cpp  TransactionLogger.cpp
src/views/: CLIGUI.cpp  GUI.cpp  GUI2.cpp  GUITest.cpp  ThrowDice.cpp  ViewTesting.cpp
src/views/animation/: ViewAnimation.cpp
src/views/animation/camera/: CameraManager.cpp  CameraMovement.cpp  View3DCamera.cpp
src/views/animation/physicsEngine/: PhysicsEngine.cpp  PhysicsObject.cpp
src/views/viewElement/: AuctionMenuView.cpp  Entry.cpp  GameHUDView.cpp  Interactable.cpp  MenuView.cpp  Popup.cpp  View2D.cpp  View3D.cpp
src/views/viewElement/board/: BoardView.cpp  TileView.cpp
src/views/viewElement/cards/: CardPileView.cpp  CardView.cpp  SkillHandView.cpp
src/views/viewElement/player/: DiceView.cpp  PlayerInventory.cpp  PlayerProfileView.cpp  PlayerView.cpp
src/views/viewElement/property/: PropertyPopup.cpp
tests/: test_config.cpp
